fix(rag): cast vector_store id to ::uuid; migrate VectorStoreMapper to MyBatis interface+XML
MMR pairwiseCosineDistance/fetchDocHighlights filtered the UUID id column with String params, triggering PG 42883 (operator does not exist: uuid = text), wrapped by Spring as BadSqlGrammarException. MmrDocumentPostProcessor's catch silently degraded to relevance-only, so MMR diversity never actually ran. Latent until hybrid retrieval (vector/bm25 top-k 30/30) pushed candidates past mmr-top-k=10 and finally invoked the SQL.

Migrate VectorStoreMapper from a JdbcTemplate @Repository class to a MyBatis @Mapper interface + XML (consistent with the other 14 mappers): all 7 public signatures preserved (12 callers untouched); id IN uses #{id}::uuid in XML; metadata json<->Map via new VectorStoreMetadataTypeHandler (replicates parseMetadata defensive semantics); VectorStoreMapperTest rewritten to cover default-method logic.

Verified: build + 23 unit tests green; gitnexus_detect_changes reports 0 affected. Live-PG smoke test still pending (no integration test for this mapper).